# algo_contest_platform

./: Makefile  README.md  docker-compose.yaml
services/content_service/: .env.example  Dockerfile  pyproject.toml
services/content_service/app/: database.py  main.py
services/content_service/app/api/: deps.py
services/content_service/app/api/endpoints/: blog_posts.py  comments.py  contests.py  posts.py  problems.py  reactions.py  register.py  tags.py  users.py
services/content_service/app/core/: config.py  database.py  logger.py  security.py
services/content_service/app/models/: __init__.py  blog_post.py  comment.py  contest.py  post.py  problem.py  reaction.py  solved_problems.py  tag.py  user.py
services/content_service/app/schemas/: blog_post.py  comment.py  contest.py  post.py  problem.py  reaction.py  security.py  tag.py  user.py
services/content_service/app/services/: blog_post.py  comment.py  contest.py  keycloak.py  post.py  problem.py  reaction.py  tag.py  user.py
services/content_service/migrations/: env.py
services/content_service/migrations/versions/: 2a5edd9c981f_initial.py
services/content_service/tests/: conftest.py
services/content_service/tests/unit/: test_blog_post.py  test_comment.py  test_contest.py  test_keycloak.py  test_post.py  test_problem.py  test_reaction.py  test_tag.py  test_user.py
services/elk/: filebeat.yaml
services/frontend/: .env.example  Dockerfile  package-lock.json  package.json
services/frontend/public/: index.html  manifest.json
services/frontend/src/: App.js  config.js  index.js  theme.js
services/frontend/src/components/: AppAppBar.js  BackgroundWrapper.js  Content.js  LoginCard.js  PostRow.js  ProblemCard.js  ProblemRow.js  RegisterCard.js
services/frontend/src/context/: AuthContext.js
services/frontend/src/pages/: ContestDetail.js  ContestsPage.js  CreateBlogPostPage.js  CreateContestPage.js  CreatePostPage.js  CreateProblemPage.js  HomePage.js  LoginSide.js  PostDetail.js  ProblemDetail.js  ProblemsPage.js  ProfilePage.js  RegisterSide.js  SolutionDetail.js  TagsPage.js
services/keycloak/: realm-export.json
services/krakend/: krakend.json
services/metrics/: prometheus.yaml
services/nginx_gateway/: default.conf
services/tester_service/: .env.example  Dockerfile  languages.yaml  pyproject.toml  requirements.txt  test.py
services/tester_service/app/: main.py
services/tester_service/app/api/: deps.py
services/tester_service/app/api/endpoints/: languages.py  solutions.py
services/tester_service/app/core/: config.py  database.py  languages.py  logger.py  middleware.py  security.py
services/tester_service/app/models/: __init__.py  solution.py
services/tester_service/app/schemas/: solution.py
services/tester_service/app/services/: analytics.py  docker_runner.py  solution.py
services/tester_service/app/worker/: celery_app.py  tasks.py
services/tester_service/migrations/: env.py
services/tester_service/migrations/versions/: 54c19bd4ed29_initial.py
services/tester_service/tests/: conftest.py
services/tester_service/tests/unit/: test_analytics.py  test_docker_runner.py  test_solution.py
