[tool.poetry]
name = "tester-service"
version = "0.1.0"
description = "Code execution service for algo_contest_platform"
authors = ["Yury Zimarev <yury.zimarev@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.39"
python-jose = "^3.4.0"
pydantic-settings = "^2.8.1"
pydantic = "^2.10.6"
aiokafka = "^0.12.0"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
