[tool.poetry]
name = "tester-service"
version = "0.1.0"
description = "Code execution service for algo_contest_platform"
authors = ["Yury Zimarev <yury.zimarev@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.39"
python-jose = "^3.4.0"
pydantic-settings = "^2.8.1"
pydantic = "^2.10.6"
aiokafka = "^0.12.0"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
celery = "^5.4.0"
amqp = "^5.2.0"
pyyaml = "^6.0.2"
prometheus-fastapi-instrumentator = "^7.0.0"
alembic = "^1.18.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
